phase 4 implementation trader agent

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,22 @@
 # -----------------------------------------------------------------------------
 
 # Your Neo N3 private key (WIF format)
+# Example wallets for testing:
+# 
+# Admin wallet (Default):
+#   Address: NRRMkqTrqwzRjznzHrXKmJzFkvpR269dB4
+#   Script Hash: 0x674511472b6dd33c939350186705ebf45788673c
+#   Private Key (WIF): KzHVPrvPs2FwgGeS6ZVPXfNnVZY1xNBKW4n2XicBChL1uWKY4NrA
+#
+# Genesis wallet (Consensus MultiSigContract):
+#   Address: NWs831WnsyqfdzeLEiNDxdN5iBMP2JvA7D
+#   Script Hash: 0xf47398b5ce7935c55d7dc7fd0937673bce851f78
+#   Private Key (WIF): KxfvkQuxCQfK6j58nUP2RLpKKPfXCGxMmPSAP2Cv6FzP7XCQNYyr
+#
+# Node1 wallet (Default):
+#   Address: Na2pFpPnuHjwFkgZhvea7WsMsXSXBU2gdZ
+#   Script Hash: 0x5cc499aef7722f4a7a683ba8642eee7be537dd9a
+#   Private Key (WIF): KxfvkQuxCQfK6j58nUP2RLpKKPfXCGxMmPSAP2Cv6FzP7XCQNYyr
 NEO_PRIVATE_KEY=your_private_key_here
 
 # Neo N3 wallet address
@@ -17,6 +33,7 @@ NEO_WALLET_ADDRESS=your_neo_address_here
 # Neo N3 RPC node URL
 # MainNet: https://mainnet1.neo.coz.io:443
 # TestNet: https://testnet1.neo.coz.io:443
+# Local: http://localhost:50012
 NEO_RPC_URL=https://testnet1.neo.coz.io:443
 
 # Network magic number (MainNet: 860833102, TestNet: 894710606)
