--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,74 @@
+# Secrets and sensitive files
 keys.md
+.env
+.env.local
+.env.*.local
+*.pem
+*.key
+
+# Claude Code files
+CLAUDE.md
+.claude/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.venv/
+venv/
+ENV/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Node/Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Neo3 compiled contracts (keep source, ignore compiled)
+*.nef
+*.manifest.json
+
+# Logs
+*.log
+
+# Temp files
+.~*
+~$*
